# CSC446-TeamDuoDuo

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile  insomnia.json  tests.http
authgen/: Cargo.toml
authgen/src/: main.rs
docs/: 1_api.md  2_building.md  3_covert.md  settings.yaml
mfalib/: Cargo.toml
mfalib/src/: lib.rs
server/: Cargo.toml  Rocket.toml  dockerfile  plaintext_steg.py
server/backend/: index.js
server/src/: auth.rs  comment.rs  db.rs  main.rs
server/src/auth/: mfa.rs  mod.rs  roles.rs  tokens.rs
server/src/query/: log.rs  mod.rs  pokemon.rs  users.rs
server/static/: blog.html  common.css  common.js  index.html  login.html
sql/: init.sql  users.sql
