[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
rocket_db_pools = {version = "0.1.0-rc.2", features = ["sqlx_mysql"]}
argon2 = "0.4.1"
rand = "0.8.5"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.6"
jsonwebtoken = "8.2.0"
